[tool.poetry]
name = "threat-reporter"
version = "0.1.0"
description = ""
authors = ["Alexey Rubaseff <alexey.rubasheff@gmail.com>"]
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.12"
litellm = "^1.45.0"
global-logger = "^0.4.2"
rss-parser = "^2.0.0"
telethon = "^1.36.0"

[tool.poetry.group.dev.dependencies]
poetry = "^1.8.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
